# P.R.I.S.M

./: .babelrc  .env.example  .env.performance  .eslintrc.json  .gitignore  .lintstagedrc.js  .npmrc  .prettierignore  .prism-state.json  .vitestrc.js  ANALYSE_BREVETABILITE_PRIORITY_QUEUE_INPI_2025.md  ANALYSE_CRITIQUE_BREVETS_PRISM_02_SEPTEMBRE_2025.md  ANALYSE_CRITIQUE_PROJECTIONS_FINANCIERES_2025.md  ANALYSE_REALISTE_TRANSFERT_SAVOIR_02_SEPTEMBRE_2025.md  ASI_DOCUMENTATION.md  AUDIT_FINAL_TROISIÈME_RELECTURE.md  AUDIT_INITIAL_INVESTISSEUR_26_JUILLET_2025.md  AUDIT_PRISM_ASI_REPORT.md  AUDIT_PRISM_VOICE_V2.md  AUDIT_SYSTEME_MEMOIRES_PRISM_02_SEPTEMBRE_2025.md  BREVET_PRISM_PRIORITY_QUEUE_INPI_2025.docx  BREVET_PRISM_TRUSTCONTEXT_INPI_2025.docx  Brochure_Lancement_MVP.md  CHANGELOG.md  CHANGELOG_CONSENSUS_DEMO.md  CHANGELOG_CORPORATE_DASHBOARD.md  CHANGELOG_SECURITY.md  COMPLETE_REPO_VERIFICATION.md  CONSENSUS_DEMO_SUMMARY.md  CONSENSUS_TESTING_GUIDE.md  CONTROL_PROMPT_FINAL.md  CORRECTIONS_ISS_INRIA_v2.md  CORRECTIONS_v2_vers_v3_FINAL.md  CORRECTION_COMMANDE_VOCALE.md  DASHBOARD_INVESTOR_ANALYSIS.md  DEMO_CONSENSUS_GUIDE.md  DEMO_GARTNER_CONSENSUS.md  DOSSIER_PREPARATION_EXAMINATEURS_BREVETS_PRISM.md  Dockerfile.stress  EXECUTION_PHASE1_CORRECTIONS_CRITIQUES.md  (+286 more)
.husky/: pre-commit
.jest-cache/: haste-map-bce5967ecb27e6ecc937e91c49fb3e1d-b30fff1f6dde232692e65142c058e289-3ea917a76646803b1b6d51e7074860da  perf-cache-bce5967ecb27e6ecc937e91c49fb3e1d-da39a3ee5e6b4b0d3255bfef95601890
__mocks__/: elevenlabs.js  insightCenter.js  prismBus.js  prismCodexAnalyzer.js  (+6 more)
(+792 files in other folders)
